"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = icalendar
 url = http://pypi.debian.net/icalendar/icalendar-4.0.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/collective/icalendar.git
 
 [autospec]
 # build 32 bit libraries
