--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = icalendar
-url = http://pypi.debian.net/icalendar/icalendar-4.0.1.tar.gz
+url = http://pypi.debian.net/icalendar/icalendar-4.0.2.tar.gz
 archives = 
 giturl = https://github.com/collective/icalendar.git
 
@@ -17,6 +17,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
